--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="rtm-main/styles/normalize.css">
-    <link rel="stylesheet" href="rtm-main/styles/main.css">
+    <link rel="stylesheet" href="../rtm-offer/common/menu/menu.css">
+    <script defer src="../rtm-offer/common/menu/menu.js"></script>
+    <link rel="stylesheet" href="../rtm-offer/common/header/header.css">
+    <link rel="stylesheet" href="../rtm-offer/common/layout/layout.css">
+    <link rel="stylesheet" href="../rtm-offer/common/footer/footer.css">
+    <link rel="stylesheet" href="../rtm-offer/common/fonts/fonts.css">
     <title>RTM Offer</title>
 </head>
 <body class="body-main">
@@ -119,19 +124,5 @@
 <footer class="main__footer">
     <p class="main__footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
 </footer>
-<script>
-    const menu = document.querySelector('#main-menu');
-    const menuBtn = document.querySelector('#menu-button');
-    const menuCloseBtn = document.querySelector('#menu-close-btn');
-
-    menuBtn.addEventListener('click', () => {
-        menu.classList.add('main__menu--active')
-        document.body.classList.add('menu-active')
-    });
-    menuCloseBtn.addEventListener('click', () => {
-        menu.classList.remove('main__menu--active')
-        document.body.classList.remove('menu-active')
-    });
-</script>
 </body>
 </html>
