--- a/rtm-bonus/bonus.html
+++ b/rtm-bonus/bonus.html
@@ -5,11 +5,76 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../rtm-bonus/styles/normalize.css">
+    <link rel="stylesheet" href="../rtm-main/styles/normalize.css">
+    <link rel="stylesheet" href="../../rtm-offer/common/menu/menu.css">
+    <script defer src="../../rtm-offer/common/menu/menu.js"></script>
+    <link rel="stylesheet" href="../../rtm-offer/common/header/header.css">
+    <link rel="stylesheet" href="../../rtm-offer/common/footer/footer.css">
+    <link rel="stylesheet" href="../../rtm-offer/common/fonts/fonts.css">
     <link rel="stylesheet" href="../rtm-bonus/styles/bonus.css">
     <title>Bonus programme</title>
 </head>
 <body class="body-main">
+<div id="main-menu" class="main__menu">
+    <div class="main__menu-content">
+        <div class="main__menu-content-list">
+            <a href="../../rtm-offer/rtm-price-list/price-list.html" class="main__menu-content-list-item">
+                Price list
+                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
+                    <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+            <a href="../../rtm-offer/rtm-bonus/bonus.html" class="main__menu-content-list-item">
+                Bonus programme
+                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
+                    <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+            <a href="../../rtm-offer/rtm-contacts/contacts.html" class="main__menu-content-list-item">
+                Contacts
+                <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
+                    <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+            </a>
+        </div>
+    </div>
+    <div class="main__menu-price-list">
+        <div class="main__menu-price-list-wrapper">
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+        </div>
+    </div>
+    <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
+        <div class="main__menu-content-close-btn-image">
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
+                <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
+            </svg>
+        </div>
+    </div>
+</div>
 <div class="bonus__container">
     <header class="rtm__bonus-menu-header">
         <nav class="rtm__bonus-menu-navbar">
@@ -82,20 +147,5 @@
 <footer class="bonus__footer">
     <p class="bonus__footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
 </footer>
-<script>
-    const menu = document.querySelector('#main-menu');
-    const menuBtn = document.querySelector('#menu-button');
-    const menuCloseBtn = document.querySelector('#menu-close-btn');
-
-    menuBtn.addEventListener('click', () => {
-        menu.classList.add('main__menu--active')
-        document.body.classList.add('menu-active')
-    });
-    menuCloseBtn.addEventListener('click', () => {
-        menu.classList.remove('main__menu--active')
-        document.body.classList.remove('menu-active')
-    });
-
-</script>
 </body>
 </html>
