--- a/rtm-search/search.html
+++ b/rtm-search/search.html
@@ -5,21 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../rtm-search/styles/normalize.css">
-    <link rel="stylesheet" href="../rtm-search/styles/search.css">
+    <link rel="stylesheet" href="../rtm-main/styles/normalize.css">
+    <link rel="stylesheet" href="../../rtm-offer/common/menu/menu.css">
+    <script defer src="../../rtm-offer/common/menu/menu.js"></script>
+    <link rel="stylesheet" href="../../rtm-offer/common/header/header.css">
+    <link rel="stylesheet" href="../../rtm-offer/common/layout/layout.css">
+    <link rel="stylesheet" href="../../rtm-offer/common/footer/footer.css">
+    <link rel="stylesheet" href="../../rtm-offer/common/fonts/fonts.css">
     <title>Search your device</title>
 </head>
 <body class="body-main">
 <div id="main-menu" class="main__menu">
     <div class="main__menu-content">
-        <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
-            <div class="main__menu-content-close-btn-image">
-                <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
-                    <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
-                </svg>
-            </div>
-        </div>
         <div class="main__menu-content-list">
             <a href="../../rtm-offer/rtm-price-list/price-list.html" class="main__menu-content-list-item">
                 Price list
@@ -27,7 +24,7 @@
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
             </a>
-            <a href="../rtm-bonus/bonus.html" class="main__menu-content-list-item">
+            <a href="../../rtm-offer/rtm-bonus/bonus.html" class="main__menu-content-list-item">
                 Bonus programme
                 <svg xmlns="http://www.w3.org/2000/svg" width="15" height="26" viewBox="0 0 15 26" fill="none">
                     <path d="M2.62402 2.5L13.124 13L2.62402 23.5" stroke="#777777" stroke-linecap="round" stroke-linejoin="round"/>
@@ -41,12 +38,48 @@
             </a>
         </div>
     </div>
+    <div class="main__menu-price-list">
+        <div class="main__menu-price-list-wrapper">
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+            <a href="" class="main__menu-price-list-item">
+                <div class="main__menu-price-list-item-image">
+                    <img src="../../rtm-offer/rtm-main/assets/menu-list-item.svg" alt="price list image">
+                </div>
+                <p class="main__menu-price-list-item-text">M30S</p>
+            </a>
+        </div>
+    </div>
+    <div id="menu-close-btn" class="main__menu-content-close-btn-wrapper">
+        <div class="main__menu-content-close-btn-image">
+            <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path d="M1 0.646484L20.799 20.4455" stroke="currentColor" stroke-linecap="round"/>
+                <path d="M1 21.1523L20.799 1.35335" stroke="currentColor" stroke-linecap="round"/>
+            </svg>
+        </div>
+    </div>
 </div>
 <div class="main__container">
-    <header class="rtm__search-header">
-        <nav class="rtm__search-navbar">
-            <div class="rtm__search-menu-wrapper">
-                <div id="menu-button" class="rtm__search-menu-mobile">
+    <header class="rtm__main-header">
+        <nav class="rtm__main-navbar">
+            <div class="rtm__main-menu-wrapper">
+                <div id="menu-button" class="rtm__main-menu-mobile">
                     <svg width="29" height="12" viewBox="0 0 29 12" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                         <path d="M1 1H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
                         <path d="M1 6H27.6667" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round"/>
@@ -54,10 +87,10 @@
                     </svg>
                     Menu
                 </div>
-                <a href="../../rtm-offer/index.html" class="rtm__search-menu-logo">ReadyToMine</a>
-                <div class="rtm__search-menu-language-selector-wrapper">
-                    <a href="" class="rtm__search-menu-language-selector rtm__search-menu-language-selector--active">En</a>
-                    <a href="" class="rtm__search-menu-language-selector">Ru</a>
+                <a href="../../rtm-offer/index.html"><p class="rtm__main-menu-logo">ReadyToMine</p></a>
+                <div class="rtm__main-menu-language-selector-wrapper">
+                    <a href="" class="rtm__main-menu-language-selector rtm__main-menu-language-selector--active">En</a>
+                    <a href="" class="rtm__main-menu-language-selector">Ru</a>
                 </div>
             </div>
         </nav>
@@ -152,19 +185,6 @@
     <p class="main__footer-copyright">2022 - 2023 Ready To Mine. All about mining equipment</p>
 </footer>
 <script>
-    const menu = document.querySelector('#main-menu');
-    const menuBtn = document.querySelector('#menu-button');
-    const menuCloseBtn = document.querySelector('#menu-close-btn');
-
-    menuBtn.addEventListener('click', () => {
-        menu.classList.add('main__menu--active')
-        document.body.classList.add('menu-active')
-    });
-    menuCloseBtn.addEventListener('click', () => {
-        menu.classList.remove('main__menu--active')
-        document.body.classList.remove('menu-active')
-    });
-
     // Поведение кастомного инпута
 
     const editableDiv = document.getElementById('editable-div');
